--- a/макет1.html
+++ b/макет1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href=".\css\maket1.css">
 </head>
 
-<body>
+<body class="box">
     <div class="centerLayer">
         <p>Макет1</p>
     </div>
