--- a/макет8.html
+++ b/макет8.html
@@ -8,15 +8,13 @@
     <link rel="stylesheet" href=".\css\maket8.css">
 </head>
 <body>
-    
+    <div class="icons">
+        <ul> 
+            <li href="" class="ship icon">Корабль</li>
+            <li href="" class="airplane icon">Самолет</li>
+            <li href="" class="car icon">Автомобиль</li>
+        </ul>
+     </div>
 
-    <div class="contener">
-        <input class="favorite styled"
-            type="button"
-            value="Кнопка1">
-        <input class="favorite styled"
-            type="button"
-            value="Кнопка с длинным названием">
-    </div>
 </body>
 </html>
