--- a/макет1.html
+++ b/макет1.html
@@ -11,7 +11,7 @@
 
 <body class="box">
     <div class="centerLayer">
-        Макет1
+        <p>Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1Макет1</p>
     </div>
     
 </body>
