--- a/макет4.html
+++ b/макет4.html
@@ -11,10 +11,8 @@
 <body>
     <div class="box">
         <header class="header">Макет4</header>
-        <div class="leftCol">Здесь будет основной контент.
-            <p> Сколько будет написано в колонке такой высоты она и будет.</p>
-        </div>
-        <div class="rightCol">
+        
+        <div class="leftCol">
             <h3>Здесь будут ссылки</h3>
             <ul>
                 <p><il>Ссылка</il></p>
@@ -24,7 +22,10 @@
                 <p><il>Ссылка</il></p>
             </ul>
         </div>
-        <div class="clear"></div>
+        <div class="rightCol">Здесь будет основной контент.
+            <p> Сколько будет написано в колонке такой высоты она и будет.</p>
+        </div>
+        
         <div class="footer">
             <h6>Chernov Aleksandr</h6>
         </div>
